Adding docker images to work with qemu-aarch64. Changing the dockerfiles to include latest images instead of v1.0 or oh-my-bash

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM akrishnaams/ubuntu2204:oh-my-bash
+FROM akrishnaams/ubuntu2204:latest
 # FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
